packages/errors/test/__snapshots__/CDP_VERSION_TOO_OLD - older.ansi
[31mA minimum CDP version of [33m1.3[39m[31m is required, but the current browser has an older version.[39m